--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:backend": "cd backend && npm run build",
     "build:frontend": "cd frontend && npm run build",
-    "build:backend-only": "cd backend && npm run build",
+    "build:backend-only": "cd backend && npm install && npm run build",
     "start": "npm run start:backend",
     "start:backend": "cd backend && npm run start:prod",
     "start:frontend": "cd frontend && npm run start",
