--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,12 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: frontend/package.json
           
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci
+          npm install
           
       - name: Build
         run: |
